--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div id = "about">
     <img id = "tamulogo" src = "tamulogo.png">
     <h1>
-      <center>Ethan Huynh</center>
+      <center>Ethan Huynh CSCE 412</center>
     </h1>
     
     <h2>
